--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   },
   "scripts": {
     "dev": "nodemon server",
