--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "hospital appointment website",
   "main": "server.js",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "slugify": "^1.6.6"
   },
   "scripts": {
